last min changes

--- a/US_Alcohol_Sales.ipynb
+++ b/US_Alcohol_Sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01ba1f97",
+   "id": "e4bd75c2",
    "metadata": {},
    "source": [
     "# US Alcohol Sales"
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c03d7bf2",
+   "id": "1c8fb431",
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "33dea3be",
+   "id": "871bae34",
    "metadata": {},
    "outputs": [
     {
@@ -705,8 +705,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "3a3efd26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1248    8.857548e+03\n",
+      "1249    6.786885e+04\n",
+      "1250    5.146018e+04\n",
+      "1251    2.230148e+04\n",
+      "1252    2.428310e+05\n",
+      "            ...     \n",
+      "2894    1.137310e+06\n",
+      "2895    1.093932e+06\n",
+      "2896    3.103701e+05\n",
+      "2897    1.063751e+06\n",
+      "2898    6.438820e+06\n",
+      "Length: 1248, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#expression for Gallons per capita\n",
+    "\n",
+    "gallonpercap = df['Gallons'] * df['PerCapita']\n",
+    "\n",
+    "print(gallonpercap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "5fd48f54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61255\n"
+     ]
+    }
+   ],
+   "source": [
+    "#expression for smallest value of Gallons\n",
+    "\n",
+    "gallonmin = df['Gallons'].min()\n",
+    "\n",
+    "print(gallonmin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e5307074",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1552672.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#xpressions for median value of Gallons\n",
+    "\n",
+    "gallonmedian = df['Gallons'].median()\n",
+    "\n",
+    "print(gallonmedian)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "bfdf1f29",
+   "id": "9319d364",
    "metadata": {},
    "source": [
     "# Graphs "
@@ -748,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57ab4f8b",
+   "id": "f135095b",
    "metadata": {},
    "source": [
     "### This graph shows that a large majority of gallons sold is in Texas, and Florida. This could partially be attributed to Texas's large size as a state; more people means more alcohol sold. Florida is also well known for partying and for having a large population. I'm sure analysis with the per capita rates would also showcase some interesting findings.  \n",
@@ -758,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f065c799",
+   "id": "881d348b",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9de0d328",
+   "id": "5cc37bab",
    "metadata": {},
    "source": [
     "### This pie chart shows the percentage of the total gallons sold each year; I felt this format showcased the difference between the years better than a bar or line graph could. Notice that 2019 and 2020 are at least 10% higher than 2021. Given that Covid struck mostly in 2020, I can understand why so many gallons were sold; I'm sure that drinking was at an all time high since people were stuck isolating for months. What I find odd about this data is that it went down so low in 2021 to 25.7%. I think that further analysis would lead to some interesting conclusions."
@@ -799,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "44f5296c",
+   "id": "7f0db270",
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c800b01",
+   "id": "66085ccf",
    "metadata": {},
    "source": [
     "### This bar graph shows the total gallons of each beverage type, filtered by state. I wanted to find the difference in sales between the beverage types because I felt like it would be illuminating. For example, in Florida and Texas, the two states that had the majority of the gallons in the earlier graph, we can see that most of that is beer sales. In most states, beer makes up the majority of sales, with spirits and wine tending to be about the same per state. The US is still a very beer-centric country."
@@ -886,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce530058",
+   "id": "f162c701",
    "metadata": {},
    "outputs": [],
    "source": []
